--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Send SMS Notification
         run: |
           curl -X POST "https://api.twilio.com/2010-04-01/Accounts/${{ secrets.TWILIO_ACCOUNT_SID }}/Messages.json" \
-            --data-urlencode "To=+1234567890" \
-            --data-urlencode "From=+TWILIO_PHONE_NUMBER" \
+            --data-urlencode "To=${{ secrets.MY_PHONE_NUMBER }}" \
+            --data-urlencode "From=${{ secrets.TWILIO_PHONE_NUMBER }}" \
             --data-urlencode "Body=QR code scanned at time" \
             -u "${{ secrets.TWILIO_ACCOUNT_SID }}:${{ secrets.TWILIO_AUTH_TOKEN }}"
